# NameTimePeriod

./: .gitignore  Cargo.toml  CurrentTimePeriod.py  LICENSE  NameTimePeriod.py  README.md  time_periods.yaml
src/: main.rs
