[package]
name = "name_time_period"
version = "0.1.0"
edition = "2021"
description = "CLI tool to check if a date falls in a defined time period"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

