[package]
name = "name_time_period"
version = "0.2.0"
authors = ["Frederick Price <fprice@pricemail.ca>"]
edition = "2024"
license = "MIT"
description = "Name the time period a date is in, configuraiton is supported"
homepage = "https://github.com/rickprice/NameTimePeriods"
repository = "https://github.com/rickprice/NameTimePeriods"
keywords = ["time"]
categories = ["date-and-time"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
regex = "1.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

